# project-structure-creator

./: Cargo.toml  README.md
src/: main.rs
