[package]
name = "project-structure-creator"
version = "0.1.0"
edition = "2021"
authors = ["Priyadarshan Giri <me@giripriyadarshan.com>"]
categories = ["command-line-utilities", "template-engine"]
description = "A CLI tool to create directory structure using ASCII tree."
license = "MIT"
homepage = "https://github.com/giripriyadarshan/project-structure-creator"
readme = "README.md"
repository = "https://github.com/giripriyadarshan/project-structure-creator"
keywords = ["cli", "ASCII", "directory"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
